# traa-uiautomator

./: .gitignore  README.md  pyproject.toml
scripts/: generate_demo_asset.py  vision_ocr.swift
src/traa_uiautomator/: backend.py  demo.py  demo_controlled.py  fake_backend.py  macos_backend.py  models.py  ocr.py  service.py  static_image_backend.py  traa_backend.py  vision_ocr.py
tests/: test_click_text.py  test_click_text_diagnostics.py  test_click_text_dry_run.py  test_click_text_permission.py  test_demo.py  test_demo_asset_script.py  test_demo_assets.py  test_demo_controlled.py  test_find_text.py  test_import.py  test_macos_backend.py  test_macos_backend_runtime.py  test_match_ranking.py  test_models.py  test_real_click_flow.py  test_service.py  test_service_runtime.py  test_static_image_backend.py  test_traa_action_delegate.py  test_traa_backend.py  test_traa_library_path.py  test_traa_provider.py  test_traa_provider_runtime.py  test_traa_real_provider.py  test_traa_real_snapshot.py  test_traa_real_sources.py  test_vision_ocr.py  test_vision_ocr_real.py  test_vision_ocr_runner.py  test_vision_ocr_script.py
